--- a/parts/client/dao.jade
+++ b/parts/client/dao.jade
@@ -2,6 +2,8 @@ template(name='dao')
     .ui.stackable.grid
         .row
             .sixteen.wide.column
+                a.icon.ui.big.circular.icon.button.zoomer(href='/')
+                    i.large.yin.yang.grey.icon
                 if skv_is 'thinking' true
                     i.big.yin.yang.loading.icon
                 // unless viewing_doc
@@ -21,7 +23,6 @@ template(name='dao')
                 //     i.smile.large.grey.icon
                 //     |emotion
                 // .spacer
-            .four.wide.column
                 each selected_emotions
                     .ui.black.compact.button.unselect_emotion
                         |#{this}
@@ -38,7 +39,6 @@ template(name='dao')
                 +emotion_mode k='anger' i='angry--v1' i2='frown' c='invert red'
                 +emotion_mode k='disgust' i='disgusting' i2='grin tongue squint' c='invert orange'
                 +emotion_mode k='fear' i='scream' i2='tired' c='black'
-                .ui.divider
                 +view_mode k='twitter' i='twitter' c='blue'
                 +view_mode k='video' i='youtube' c='red'
                 +view_mode k='image' i='picture' c='green'
@@ -50,8 +50,23 @@ template(name='dao')
                 // +view_mode k='porn' i='mercury'
                 +view_mode k='bitcoin' i='bitcoin disabled'
                 +view_mode k='covid' i='covid disabled'
-            .four.wide.column
-                .ui.segment
+                .ui.compact.button
+                    .ui.inline.header 
+                        i.large.clock.icon
+                        |when
+                .ui.compact.button
+                    .ui.inline.header
+                        i.large.marker.icon
+                        |where
+                .ui.compact.button
+                    .ui.inline.header
+                        i.large.users.icon
+                        |people
+                .ui.compact.button
+                    .ui.inline.header
+                        i.large.users.icon
+                        |organizations
+                .ui.button
                     if skv_is 'loading_alpha' true
                         .ui.header 
                             i.big.brain.loading.icon 
@@ -100,7 +115,7 @@ template(name='dao')
                         |#{name}
                 i.smile.large.icon
                 div
-            .six.wide.column.scrolling
+            .eight.wide.column.scrolling
                 |limit
                 .ui.dropdown
                     span.text dropdown
@@ -166,9 +181,9 @@ template(name="doc")
                     .line
                     .line
         else
-            // if embed
-            //     .rounded.full
-            //         |!{embed}
+            if embed
+                .rounded.full
+                    |!{embed}
             // else
             if is_image
                 img.ui.centered.image.pointer.zoomer.invert.toggle_view(src=url)
