--- a/parts/client/s.css
+++ b/parts/client/s.css
@@ -8,14 +8,14 @@ body {
     /*scroll-behavior: smooth;*/
     /*margin-top: 5em;*/
     /*background: rgba(200,200,200,1) !important;*/
-     /*filter: invert(1) !important; */
+    filter: invert(1) !important; 
      /*overscroll-behavior: none; */
-    /*transition: all .5s ease !important;*/
+    transition: all 1s ease !important;
     /* background: #0e0e44 !important; */
 }
 
 .tone_item {
-    transition: all .5s ease !important;
+    transition: all 1s ease !important;
 }
 
 .displaynone {
@@ -173,7 +173,7 @@ html.ios body {
 
 
 .segment:not(.pushable) {
-  transition: height .5s linear;
+  transition: height 1s linear;
   /*border-radius: 10px !important;*/
 }
 
@@ -605,7 +605,7 @@ input {
 
 
 .button, .selector, .card, .dark_mode, .ui.header, .ui.label, p, img{
-    animation: fadein .5s !important;
+    animation: fadein 1s !important;
     /*-webkit-transition: opacity .1s ease-in !important;*/
     /* -webkit-transition: opacity .1s ease-out; */
      animation: fadeout .25s; 
@@ -613,7 +613,7 @@ input {
 
 
 .icon:not(.loading){
-    animation: fadein .5s !important;
+    animation: fadein 1s !important;
     transition: all 1s ease !important;
     /* -webkit-transition: opacity .1s ease-out; */
     animation: fadeout .25s; 
@@ -635,7 +635,7 @@ input {
 }
 
 .ui.header{
-    transition: all .5s ease !important;
+    transition: all 1s ease !important;
     /* text-transform: capitalize !important; */
     /* font-family: 'Raleway', sans-serif !important; */
     /* font-family: 'Montserrat', sans-serif !important; */
